--- a/webinterface/demo_module/templates/demo_module/make_test.html
+++ b/webinterface/demo_module/templates/demo_module/make_test.html
@@ -8,7 +8,7 @@
   <div class="padding">
     <div class="container-fluid" id="underlay">
         <div class="module-text">
-            <h1>Demo-modul</h1>
+            <h1>Batteriprøvestand</h1>
         </div>
     </div>
   </div>
@@ -19,7 +19,7 @@
 
         <div class="container underlay">
 
-            <h3>Opret ny test</h3>
+            <h3>Vælg parametre</h3>
 
             <div class="padding">
                 {% crispy form %}
