--- a/webinterface/templates/base.html
+++ b/webinterface/templates/base.html
@@ -69,13 +69,13 @@
                                         dropdown-item
                                         nav-link
                                         {% if request.path == '/demo_module/' %}active{% endif %}"
-                                       href="{% url 'demo_home' %}">Demo-modul</a>
+                                       href="{% url 'demo_home' %}">Batteriprøvestand</a>
 
-                                    <a class="
+                                 <!--   <a class="
                                         dropdown-item
                                         nav-link
                                         {% if request.path == '/test/' %}active{% endif %}"
-                                       href="{% url 'test' %}">Test databasen</a>
+                                       href="{% url 'test' %}">Test databasen</a> -->
 
                             </div>
                         </li>
