--- a/webinterface/demo_module/templates/demo_module/inbound_teststand_package_list.html
+++ b/webinterface/demo_module/templates/demo_module/inbound_teststand_package_list.html
@@ -19,7 +19,7 @@
 
         <div class="container underlay">
 
-            <h3>Testresultater v3.2</h3>
+            <h3>Testresultater</h3>
 
             <div class="padding">
 
@@ -30,7 +30,7 @@
                             <th scope="col">#</th>
                             <th scope="col">Dato</th>
                             <th scope="col">Oprettet af</th>
-                            <th scope="col">Se</th>
+                         <!--   <th scope="col">Se</th> -->
                             <th scope="col">Hent</th>
                         </tr>
                     </thead>
@@ -52,9 +52,9 @@
                                 </td>
                                 <td>
                                     <!-- 4th col: View test result in detail -->
-                                    <a href="{{ dyn_url }}{{ inbound_teststand_package.id }}"><i class="fas fa-chart-area"></i></a>
+                              <!--    <a href="{{ dyn_url }}{{ inbound_teststand_package.id }}"><i class="fas fa-chart-area"></i></a>
                                 </td>
-                                <td>
+                                <td>  -->
                                     <!-- 5th col: Dowload directly as CSV -->
                                     <a href="{{ dyn_csv_url }}/{{ inbound_teststand_package.id }}">CSV<i class="fas fa-download"></i></a>
                                     <br>
